--- a/contato.html
+++ b/contato.html
@@ -9,7 +9,7 @@
     <body>
         <header class="produtos-head">
             <div class="caixa">
-                <h1><img src="logo.png" alt="Logo"></h1>
+                <h1><img src="logo.png" alt="Logo da barbearia"></h1>
 
                 <nav>
                     <ul>
@@ -23,19 +23,41 @@
         <main>
             <form>
                 <label for="nomeesobrenome">Nome e Sobrenome</label>
-                <input type="text" id="nomeesobrenome">
+                <input type="text" id="nomeesobrenome" class="input-padrao" required>
 
                 <label for="email">E-mail</label>
-                <input type="text" id="email">
+                <input type="email" id="email" class="input-padrao" required placeholder="seuemail@dominio.com">
 
                 <label for="telefone">Telefone</label>
-                <input type="text" id="telefone">
+                <input type="tel" id="telefone" class="input-padrao" required placeholder="(XX) XXXXX-XXXX">
 
+                <label for="mensagem">Mensagem</label>
+                <textarea cols="70" rows="10" id="mensagem" class="input-padrao" required></textarea>
+
+                <fieldset>
+                    <legend>Como prefere nosso contato?</legend>
+                    <label for="radio-email"><input type="radio" name="contato" value="email" id="radio-email"> E-mail</label>
+                    
+                    <label for="radio-telefone"><input type="radio" name="contato" value="telefone" id="radio-telefone"> Telefone</label>
+
+                    <label for="radio-whatsapp"><input type="radio" name="contato" value="whatsapp" id="radio-whatsapp" checked> Whatsapp</label>
+                </fieldset>
+                
+                <fieldset>
+                    <legend>Qual horário prefere ser atendido?</legend>
+                    <select>
+                        <option>Manhã</option>
+                        <option>Tarde</option>
+                        <option>Noite</option>
+                    </select>
+                </fieldset>
+
+                <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por e-mail?</label>
                 <input type="submit" value="Enviar formulário">
             </form>
         </main>
         <footer>
-            <img src="logo-branco.png" alt="Logo footer">
+            <img src="logo-branco.png" alt="Logo da barbearia">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2022</p>
         </footer>
     </body>
