--- a/contato.html
+++ b/contato.html
@@ -53,7 +53,7 @@
                 </fieldset>
 
                 <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por e-mail?</label>
-                <input type="submit" value="Enviar formulário">
+                <input type="submit" value="Enviar formulário" class="enviar">
             </form>
         </main>
         <footer>
