--- a/contato.html
+++ b/contato.html
@@ -55,7 +55,31 @@
                 <label class="checkbox"><input type="checkbox" checked>Gostaria de receber nossas novidades por e-mail?</label>
                 <input type="submit" value="Enviar formulário" class="enviar">
             </form>
+
+            <table>
+                <thead>
+                    <tr>
+                        <th>Dia</th>
+                        <th>Horário</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>Segunda</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Quarta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                    <tr>
+                        <td>Sexta</td>
+                        <td>8h ~ 20h</td>
+                    </tr>
+                </tbody>
+            </table>
         </main>
+
         <footer>
             <img src="logo-branco.png" alt="Logo da barbearia">
             <p class="copyright">&copy; Copyright Barbearia Alura - 2022</p>
