--- a/index.html
+++ b/index.html
@@ -4,26 +4,43 @@
     <head>
         <meta charset="UTF-8">
         <title>Barbearia Alura</title>
-        <link rel="stylesheet" href="style-home.css">
+        <!-- <link rel="stylesheet" href="style-home.css"> -->
+        <link rel="stylesheet" href="reset.css">
+        <link rel="stylesheet" href="style.css">
+        <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400&family=Righteous&family=Sarala:wght@400;700&display=swap" rel="stylesheet">
     </head>
     <body>
-        <header>
-            <h1 class="titulo-principal">Barbearia Alura</h1>
+        <header class="produtos-head">
+            <div class="caixa">
+                <h1><img src="logo.png" alt="Logo"></h1>
 
-            <img id="banner" src="banner.jpg" alt="Banner" width="1250">
+                <nav>
+                    <ul>
+                        <li><a href="index.html">Home</a></li>
+                        <li><a href="produtos.html">Produtos</a></li>
+                        <li><a href="contato.html">Contato</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
+
+            <img class="banner" src="banner.jpg" alt="Banner" width="1250">
+
         <main>
-            <div class="principal">
-                <h2>Sobre a Barbearia Alura</h2>
+            <section class="principal">
+                <h2 class="titulo-principal">Sobre a Barbearia Alura</h2>
+
+                <img class="utensilios" src="utensilios.jpg" alt="utensílios de um barbeiro">
 
                 <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o mercado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
 
                 <p id="missao"><em>Nossa missão é: <strong>"Proporcionar auto-estima e qualidade de vida aos clientes".</strong></em></p>
 
                 <p>Oferecemos profissionais experientes e antenados às mudanças no mundo da moda. O atendimento possui padrão de excelência e agilidade, garantindo qualidade e satisfação dos nossos clientes.</p>
-            </div>
-            <div class="beneficios">
-                <h3>Benefícios</h3>
+            </section>
+
+            <section class="beneficios">
+                <h3 class="titulo-principal">Benefícios</h3>
 
                 <ul>
                     <li class="itens">Atendimento ao cliente</li>
@@ -32,7 +49,11 @@
                     <li class="itens">Profissionais qualificados</li>
                 </ul>
                 <img src="beneficios.jpg" alt="Benefícios" class="imagembeneficios">
-            </div>
+            </section>
         </main>
+        <footer>
+            <img src="logo-branco.png" alt="Logo footer">
+            <p class="copyright">&copy; Copyright Barbearia Alura - 2022</p>
+        </footer>
     </body>
 </html>
